# link-manager-API

./: Cargo.toml  Rocket.toml  database.sqlite  database.sqlite-shm  database.sqlite-wal
migrations/2024-02-07-234734_create_link/: up.sql
migrations/2024-02-12-171637_create_user/: up.sql
src/: auth.rs  controllers.rs  main.rs  models.rs  schema.rs
