[package]
name = "link-manager-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version =  "0.5.0" , features = ["json"]}
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.111"
base64 = "0.21.7"
diesel = {version =  "2.1.4", features = ["sqlite", "r2d2"]}
rocket_sync_db_pools = {version =  "0.1.0-rc", features = ["diesel_sqlite_pool"] }
diesel_migrations = "2.1.0"

